external-crates/move/crates/move-package-alt/tests/data/manifest_parsing_invalid/no_path_set_for_dependency/Move@parsed.snap
---
source: crates/move-package-alt/tests/test_runner.rs
---
error: TOML parse error at line 6, column 5
  |
6 | A = { }
  |     ^^^
data did not match any variant of untagged enum ManifestDependencyInfo
